vlib/v/checker/tests/comptime_env/using_comptime_env.run.out
vlib/v/checker/tests/comptime_env/using_comptime_env.vv:1:3: error: The environments variable "VAR" is empty. Please assign a value.
    1 | #flag -I $env('VAR')/xyz
      |   ~~~~~~~~~~~~~~~~~~~~~~
    2 | #include "$env('VAR')/stdio.h"
    3 |
vlib/v/checker/tests/comptime_env/using_comptime_env.vv:2:3: error: The environments variable "VAR" is empty. Please assign a value.
    1 | #flag -I $env('VAR')/xyz
    2 | #include "$env('VAR')/stdio.h"
      |   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    3 | 
    4 | fn main() {
