vlib/v/checker/tests/comptime_env/using_comptime_env.vv
#flag -I $env('VAR')/xyz
#include "$env('VAR')/stdio.h"

fn main() {
	env := $env('VAR')
	println(env)
	println('done')
}
